2011-04-05  Taco Hoekwater  <taco@luatex.org>

	* mp.w, mpost.w: import metapost 1.504

2011-04-05  Taco Hoekwater  <taco@luatex.org>

	* Import of MetaPost 1.503, updating the .w files as well
	as lmplib.c and avl.c, and adding mpmath.w and removing memio.w
	* am/libmplib.am: add support for mpmath.w, remove memio.w
	* mptrap.test: remove the second part as metapost no longer
	uses .mem files at all

2011-03-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libmplib.am: Use AM_CFLAGS instead of libmplib_a_CFLAGS.
	* am/mplib.am: Use AM_CFLAGS instead of mpost_CFLAGS.

2011-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am [WIN32]: Add dvitomp.exe wrapper for MinGW.

2011-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am (mptrap.diffs): Use $(triptrap_diffs).

2011-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am (mptrap-clean): Use TRIPTRAP_CLEAN.

2010-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/mplib.am: install-exec-hook and uninstall-hook rules now
	in ../Makefile.am; append required symlink to bin_links.

2010-06-11  Taco Hoekwater  <taco@luatex.org>

	* *.w, lmplib.h: change include of "config.h" to <w2c/config.h>.

2010-06-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libmplib.am (libmplib_a_CPPFLAGS): Add $(AM_CPPFLAGS).
	* am/mplib.am (mpost_CPPFLAGS): Add $(AM_CPPFLAGS).

2010-05-31  Taco Hoekwater  <taco@luatex.org>

	* mp.w (mp_set_output_file_name): prevent reallocation of 
	string pool during output file name generation.
	
2010-05-19  Taco Hoekwater  <taco@luatex.org>

	* mpost.w: add WEB2CVERSION to the banner.

2010-04-13  Taco Hoekwater  <taco@luatex.org>

	* new import from luatex repository (HEAD of 0.60.x branch)

2010-04-05  Karl Berry  <karl@tug.org>

	* mptrap.test: use --mem, not --memname (which does not exist).

2010-04-01  Taco Hoekwater <taco@elvenkind.com>
	    
	* lmplib.c: revert #include "../luatex-api.h".

2010-04-01  Taco Hoekwater <taco@elvenkind.com>
	    