@@ -1,6 +1,6 @@
 ## texk/web2c/mplibdir/am/libmplib.am: Makefile fragment for libmplib.
 ##
-## Copyright (C) 2009 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009 - 2011 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
 ## libmplib.a, used by MetaPost and luaTeX
@@ -8,54 +8,50 @@
 EXTRA_LIBRARIES += libmplib.a
 
 libmplib_a_CPPFLAGS = $(AM_CPPFLAGS) -I$(srcdir)/mplibdir
-libmplib_a_CFLAGS = $(WARNING_CFLAGS)
 
 ## libmplib C sources
 libmplib_a_SOURCES = mplibdir/avl.h mplibdir/avl.c
-nodist_libmplib_a_SOURCES = tfmin.c
-nodist_libmplib_a_SOURCES += $(mp_c_h) $(psout_c_h) $(svgout_c_h) $(mpmath_c_h)
+nodist_libmplib_a_SOURCES = tfmin.c $(mp_c_h) $(mpmath_c_h) $(psout_c_h) $(svgout_c_h) $(tfmin_c_h)
 mp_c_h =  mp.c mplib.h mpmp.h
+mpmath_c_h = mpmath.h mpmath.c
 psout_c_h = mppsout.h psout.c mplibps.h
 svgout_c_h = mplibsvg.h mpsvgout.h svgout.c
-mpmath_c_h = mpmath.h mpmath.c
 
+# Creating one file: just one rule
 tfmin.c: ctangle$(EXEEXT) mplibdir/tfmin.w
 	$(mp_ctangle) tfmin.w
 
-$(mp_c_h): mp-ctangle
-mp-ctangle: ctangle$(EXEEXT) mplibdir/mp.w
-	$(mp_ctangle) mp.w
-	echo timestamp >$@
-	touch $(mp_c_h)
+# Creating several files: need stamp file and two rules with identical recipes
+$(mp_c_h): mp-tangle
+	@$(mp_ctangle_sh) mp
+mp-tangle: ctangle$(EXEEXT) mplibdir/mp.w tangle-sh
+	@$(mp_ctangle_sh) mp
 
-$(psout_c_h): psout-ctangle
-psout-ctangle: ctangle$(EXEEXT) mplibdir/psout.w
-	$(mp_ctangle) psout.w
-	echo timestamp >$@
-	touch $(psout_c_h)
+$(mpmath_c_h): mpmath-tangle
+	@$(mp_ctangle_sh) mpmath
+mpmath-tangle: ctangle$(EXEEXT) mplibdir/mpmath.w tangle-sh
+	@$(mp_ctangle_sh) mpmath
 
-$(svgout_c_h): svgout-ctangle
-svgout-ctangle: ctangle$(EXEEXT) mplibdir/svgout.w
-	$(mp_ctangle) svgout.w
-	echo timestamp >$@
-	touch $(svgout_c_h)
+$(psout_c_h): psout-tangle
+	@$(mp_ctangle_sh) psout
+psout-tangle: ctangle$(EXEEXT) mplibdir/psout.w tangle-sh
+	@$(mp_ctangle_sh) psout
 
-$(mpmath_c_h): mpmath-ctangle
-mpmath-ctangle: ctangle$(EXEEXT) mplibdir/mpmath.w
-	$(mp_ctangle) mpmath.w
-	echo timestamp >$@
-	touch $(mpmath_c_h)
+$(svgout_c_h): svgout-tangle
+	@$(mp_ctangle_sh) svgout
+svgout-tangle: ctangle$(EXEEXT) mplibdir/svgout.w tangle-sh
+	@$(mp_ctangle_sh) svgout
 
 ## libmplib CWeb sources
 libmplib_web = mplibdir/mp.w mplibdir/psout.w mplibdir/svgout.w
-libmplib_web += mplibdir/tfmin.w mplibdir/mpmath.w
+libmplib_web += mplibdir/mpmath.w mplibdir/tfmin.w
 
 $(libmplib_a_OBJECTS): $(nodist_libmplib_a_SOURCES)
 
 EXTRA_DIST += $(libmplib_web)
 
 DISTCLEANFILES += $(nodist_libmplib_a_SOURCES) \
-	mp-ctangle psout-ctangle svgout-ctangle mpmath-ctangle
+	mp-tangle mpmath-tangle psout-tangle svgout-tangle
 
 ## only used by luaTeX
 EXTRA_DIST += mplibdir/lmplib.c
