@@ -1,22 +1,32 @@
 ## texk/web2c/mplibdir/am/mplib.am: Makefile fragment for MetaPost.
 ##
-## Copyright (C) 2009 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009 - 2011 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 
 ## MetaPost
 ##
 if MP
 bin_PROGRAMS += mpost
+if WIN32
+bin_PROGRAMS += dvitomp
+else !WIN32
+bin_links += mpost:dvitomp
+endif !WIN32
 endif MP
 EXTRA_PROGRAMS += mpost
 
 mpost_CPPFLAGS = $(AM_CPPFLAGS) -I$(srcdir)/mplibdir
-mpost_CFLAGS = $(WARNING_CFLAGS)
-
-mp_ctangle = CWEBINPUTS=$(srcdir)/mplibdir $(ctangle)
-
 mpost_DEPENDENCIES = libmplib.a
 mpost_LDADD = libmplib.a $(KPATHSEA_LIBS) -lm
+
+dvitomp_CPPFLAGS = -DEXEPROG=\"mpost.exe\"
+dvitomp_SOURCES = $(srcdir)/../texlive/w32_wrapper/callexe.c
+dvitomp_LDADD =
+
+# Creating one file: just one rule
+mp_ctangle = CWEBINPUTS=$(srcdir)/mplibdir $(ctangle)
+# Creating several files: need stamp file and two rules with identical recipes
+mp_ctangle_sh = CWEBINPUTS=$(srcdir)/mplibdir $(SHELL) ./tangle-sh $@ $(CTANGLE)
 
 ## MetaPost C sources
 nodist_mpost_SOURCES = mpost.c $(mpxout_c_h)
@@ -25,11 +35,10 @@ mpxout_c_h = mpxout.c mpxout.h
 mpost.c: ctangle$(EXEEXT) mplibdir/mpost.w
 	$(mp_ctangle) mpost.w
 
-$(mpxout_c_h): mpxout-ctangle
-mpxout-ctangle: ctangle$(EXEEXT) mplibdir/mpxout.w
-	$(mp_ctangle) mpxout.w
-	echo timestamp >$@
-	touch $(mpxout_c_h)
+$(mpxout_c_h): mpxout-tangle
+	@$(mp_ctangle_sh) mpxout
+mpxout-tangle: ctangle$(EXEEXT) mplibdir/mpxout.w tangle-sh
+	@$(mp_ctangle_sh) mpxout
 
 ## MetaPost CWeb sources
 mpost_web = mplibdir/mpost.w mplibdir/mpxout.w
@@ -38,16 +47,7 @@ $(mpost_OBJECTS): $(nodist_mpost_SOURCES) libmplib.a
 
 EXTRA_DIST += mplibdir/ChangeLog $(mpost_web)
 
-DISTCLEANFILES += $(nodist_mpost_SOURCES) mpxout-ctangle
-
-# Double-colon rules since we do something similar in luatexdir (maybe others).
-if MP
-install-exec-hook::
-	cd $(DESTDIR)$(bindir) && rm -f dvitomp$(EXEEXT) \
-	  && $(LN_S) mpost$(EXEEXT) dvitomp$(EXEEXT)
-uninstall-hook::
-	rm -f $(DESTDIR)$(bindir)/dvitomp$(EXEEXT)
-endif MP
+DISTCLEANFILES += $(nodist_mpost_SOURCES) mpxout-tangle
 
 ## MetaPost Tests
 ##
@@ -58,13 +58,17 @@ EXTRA_DIST += $(mp_tests)
 if MP
 TESTS += $(mp_tests)
 check_PROGRAMS += pltotf tftopl
+TRIPTRAP += mptrap.diffs
+TRIPTRAP_CLEAN += mptrap-clean
 endif MP
+DISTCLEANFILES += mptrap.diffs
 
-.PHONY: mptrap-clean
-clean-local:: mptrap-clean
 ## dvitomp.test
 DISTCLEANFILES += ptmr.mpx tests/xptmr.mpx tests/xstory.mpx
 ## mptrap.test
+mptrap.diffs: mpost$(EXEEXT)
+	$(triptrap_diffs) $@
+.PHONY: mptrap-clean
 mptrap-clean:
 	rm -f mtrap.mp mtrap.mem trapf.tfm
 	rm -f mtrap.log mtrap.0 mtrap.1 writeo writeo.log writeo.2
